--- a/app/index.html
+++ b/app/index.html
@@ -42,6 +42,7 @@
     <script src="scripts/app.js"></script>
     <script src="js/sb-admin-2.js"></script>
     <script src="index.constants.js"></script>
+    <script src="js/utilities.js"></script>
     <!-- endbuild -->
 
 
