--- a/app/index.html
+++ b/app/index.html
@@ -19,6 +19,9 @@
     <link rel="stylesheet" href="bower_components/metisMenu/dist/metisMenu.min.css">
     <link rel="stylesheet" href="bower_components/angular-loading-bar/build/loading-bar.min.css">
     <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css" type="text/css">
+    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="bower_components/angular-notify/dist/angular-notify.css" >
+    <link rel="stylesheet" href="bower_components/angular-notify/dist/angular-notify.min.css">
     <!-- endbuild -->
 
     <!-- build:js(.) scripts/vendor.js -->
@@ -35,6 +38,10 @@
     <script src="bower_components/Chart.js/Chart.min.js"></script>
     <script src="bower_components/restangular/dist/restangular.min.js"></script>
     <script src="bower_components/lodash/dist/lodash.min.js"></script>
+    <script src="bower_components/satellizer/dist/satellizer.min.js"></script>
+    <script src="bower_components/satellizer/dist/satellizer.js"></script>
+    <script src="bower_components/angular-notify/dist/angular-notify.js"></script>
+    <script src="bower_components/angular-notify/dist/angular-notify.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
