--- a/app/index.html
+++ b/app/index.html
@@ -42,6 +42,7 @@
     <script src="bower_components/satellizer/dist/satellizer.js"></script>
     <script src="bower_components/angular-notify/dist/angular-notify.js"></script>
     <script src="bower_components/angular-notify/dist/angular-notify.min.js"></script>
+    <script src="bower_components/pusher-websocket-iso/dist/web/pusher.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -81,7 +82,7 @@
 
 <body>
 
-<div ng-app="energyApp">
+<div ng-app="unicesarNNN">
 
     <div ui-view></div>
 
