--- a/app/scripts/directives/header/header-notification/header-notification.html
+++ b/app/scripts/directives/header/header-notification/header-notification.html
@@ -3,12 +3,12 @@
     <!-- /.dropdown -->
     <li class="dropdown">
         <a class="dropdown-toggle" data-toggle="dropdown">
-            <i class="fa fa-user fa-fw"></i>  <i class="fa fa-caret-down"></i>
+            <i class="fa fa-user fa-fw"></i> <i class="fa fa-caret-down"></i>
         </a>
         <ul class="dropdown-menu dropdown-user">
-            <li><a href="#"><i class="fa fa-user fa-fw"></i>Mí perfil</a>
+            <li><a ui-sref="dashboard.perfil"><i class="fa fa-user fa-fw"></i>Mí perfil</a>
             <li class="divider"></li>
-            <li><a ng-click="vm.salir()"><i class="fa fa-sign-out fa-fw"></i> Salir</a>
+            <li><a ui-sref="login"><i class="fa fa-sign-out fa-fw"></i> Salir</a>
             </li>
         </ul>
         <!-- /.dropdown-user -->
