--- a/app/scripts/directives/header/header.html
+++ b/app/scripts/directives/header/header.html
@@ -7,7 +7,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="index.html"><span><img src="./imagenes/favicon.png"> ENERGYAPP</span></a>
+        <a class="navbar-brand" href="index.html"><span><img src="./imagenes/favicon.png"> UnicesarNNN</span></a>
     </div>
     <!-- /.navbar-header -->
     <header-notification></header-notification>
