--- a/app/scripts/directives/sidebar/sidebar.html
+++ b/app/scripts/directives/sidebar/sidebar.html
@@ -1,21 +1,20 @@
 <div class="navbar-default sidebar" role="navigation">
     <div class="sidebar-nav navbar-collapse">
         <ul class="nav in" id="side-menu">
-
-            <li ui-sref-active="active">
-                <a ui-sref="dashboard.chart"><i class="fa fa-bar-chart-o fa-fw"></i> Graficos <span></span></a>
-            </li>
-
-
-            <li ng-class="{active:collapseVar==4}">
-                <a href="" ng-click="check(4)"><i class="fa fa-files-o fa-fw"></i> Sample Pages<span
+            <li ng-class="{active: collapseVar==1}">{{dropDown}}
+                <a href="" ng-click="check(1)">TAXONOMÍAS<span
                         class="fa arrow"></span></a>
-                <ul class="nav nav-second-level" collapse="collapseVar!=4">
-                    <li ng-class="{active: selectedMenu=='blank'}">
-                        <a ui-sref="dashboard.blank" ng-click="selectedMenu='blank'">Blank Page</a>
+                <ul class="nav nav-second-level" collapse="collapseVar!=1">
+                    <li ui-sref-active="active">
+                        <a ui-sref="dashboard.inicio">NANDA</a>
                     </li>
-                    <li>
-                        <a ui-sref="login">Login Page</a>
+                    <li class="divider"></li>
+                    <li ui-sref-active="active">
+                        <a ui-sref="dashboard.inicio">NOC</a>
+                    </li>
+                    <li class="divider"></li>
+                    <li ui-sref-active="active">
+                        <a ui-sref="dashboard.inicio">NIC</a>
                     </li>
                 </ul>
                 <!-- /.nav-second-level -->
